[gd_scene load_steps=7 format=3 uid="uid://cl7s6dpwckdcg"]

[ext_resource type="Theme" uid="uid://b3tgogofdc3ob" path="res://Themes/Text.tres" id="1_6a30g"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_37en6"]

[sub_resource type="Environment" id="Environment_kr6dh"]
background_mode = 1

[sub_resource type="BoxMesh" id="BoxMesh_04y2o"]

[sub_resource type="Gradient" id="Gradient_0ioju"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.501961, 0.501961, 0.501961, 0.501961)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_l0hub"]
gradient = SubResource("Gradient_0ioju")

[node name="Main" type="Node3D"]
script = ExtResource("1_37en6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kr6dh")

[node name="Cube" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_04y2o")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="Control Panel" type="TextureRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -243.0
offset_right = 256.0
offset_bottom = 243.0
grow_vertical = 2
texture = SubResource("GradientTexture1D_l0hub")

[node name="GridContainer" type="GridContainer" parent="Control Panel"]
custom_minimum_size = Vector2(256, 486)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Control Panel/GridContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Controls"

[node name="Rotation" type="RichTextLabel" parent="Control Panel/GridContainer"]
custom_minimum_size = Vector2(256, 36)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_6a30g")
bbcode_enabled = true
text = "[center]Rotation"

[node name="Rotation Container" type="GridContainer" parent="Control Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="X" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "X:"

[node name="x-angle-text" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "360°"

[node name="x-angle" type="HSlider" parent="Control Panel/GridContainer/Rotation Container"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 360.0

[node name="Y" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "Y: "

[node name="y-angle-text" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "0°"

[node name="y-angle" type="HSlider" parent="Control Panel/GridContainer/Rotation Container"]
layout_mode = 2
max_value = 360.0

[node name="Z" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "Z: "

[node name="z-angle-text" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "0°"

[node name="z-angle" type="HSlider" parent="Control Panel/GridContainer/Rotation Container"]
layout_mode = 2
max_value = 360.0

[node name="Step" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(60, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "Step: "

[node name="step-text" type="RichTextLabel" parent="Control Panel/GridContainer/Rotation Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "1
"

[node name="step" type="HSlider" parent="Control Panel/GridContainer/Rotation Container"]
layout_mode = 2
max_value = 180.0
step = 5.0

[node name="Scale" type="RichTextLabel" parent="Control Panel/GridContainer"]
custom_minimum_size = Vector2(256, 36)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_6a30g")
bbcode_enabled = true
text = "[center]Scale"

[node name="Scale Container" type="GridContainer" parent="Control Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="X" type="RichTextLabel" parent="Control Panel/GridContainer/Scale Container"]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "X:"

[node name="x-scale-text" type="RichTextLabel" parent="Control Panel/GridContainer/Scale Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "1x"

[node name="x-scale" type="HSlider" parent="Control Panel/GridContainer/Scale Container"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="Y" type="RichTextLabel" parent="Control Panel/GridContainer/Scale Container"]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "Y: "

[node name="y-scale-text" type="RichTextLabel" parent="Control Panel/GridContainer/Scale Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "1x
"

[node name="y-scale" type="HSlider" parent="Control Panel/GridContainer/Scale Container"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="Z" type="RichTextLabel" parent="Control Panel/GridContainer/Scale Container"]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "Z: "

[node name="z-scale-text" type="RichTextLabel" parent="Control Panel/GridContainer/Scale Container"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
theme = ExtResource("1_6a30g")
theme_override_font_sizes/normal_font_size = 18
text = "1x
"

[node name="z-scale" type="HSlider" parent="Control Panel/GridContainer/Scale Container"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="Button" type="Button" parent="Control Panel/GridContainer"]
layout_mode = 2
theme = ExtResource("1_6a30g")
text = "Reset"

[connection signal="value_changed" from="Control Panel/GridContainer/Rotation Container/x-angle" to="." method="_on_angle_value_changed" binds= [0]]
[connection signal="value_changed" from="Control Panel/GridContainer/Rotation Container/y-angle" to="." method="_on_angle_value_changed" binds= [1]]
[connection signal="value_changed" from="Control Panel/GridContainer/Rotation Container/z-angle" to="." method="_on_angle_value_changed" binds= [2]]
[connection signal="value_changed" from="Control Panel/GridContainer/Rotation Container/step" to="." method="_on_angle_step_value_changed"]
[connection signal="value_changed" from="Control Panel/GridContainer/Scale Container/x-scale" to="." method="_on_scale_value_changed" binds= [0]]
[connection signal="value_changed" from="Control Panel/GridContainer/Scale Container/y-scale" to="." method="_on_scale_value_changed" binds= [1]]
[connection signal="value_changed" from="Control Panel/GridContainer/Scale Container/z-scale" to="." method="_on_scale_value_changed" binds= [2]]
[connection signal="pressed" from="Control Panel/GridContainer/Button" to="." method="_on_reset_pressed"]
